--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,39 +1,70 @@
-
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
-@use '@angular/material' as mat;
-// Plus imports for other components in your app.
-
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
+@use "@angular/material" as mat;
 @include mat.core();
 
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$folio-genie-web-app-primary: mat.define-palette(mat.$indigo-palette);
-$folio-genie-web-app-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400&family=Poppins:ital,wght@0,400;0,500;1,400&display=swap");
 
-// The warn palette is optional (defaults to red).
+$md-lightpalette: (
+  50: #ebeefe,
+  100: #ccd4fc,
+  200: #aab7fb,
+  300: #889af9,
+  400: #6f85f7,
+  500: #556ff6,
+  600: #4e67f5,
+  700: #445cf3,
+  800: #3b52f2,
+  900: #2a40ef,
+  A100: #ffffff,
+  A200: #fbfbff,
+  A400: #c8cdff,
+  A700: #aeb6ff,
+  contrast: (
+    50: #000000,
+    100: #000000,
+    200: #000000,
+    300: #000000,
+    400: #000000,
+    500: #ffffff,
+    600: #ffffff,
+    700: #ffffff,
+    800: #ffffff,
+    900: #ffffff,
+    A100: #000000,
+    A200: #000000,
+    A400: #000000,
+    A700: #000000,
+  ),
+);
+$folio-genie-web-app-primary: mat.define-palette($md-lightpalette);
+$folio-genie-web-app-accent: mat.define-palette(
+  mat.$pink-palette,
+  A200,
+  A100,
+  A400
+);
+
 $folio-genie-web-app-warn: mat.define-palette(mat.$red-palette);
 
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
-$folio-genie-web-app-theme: mat.define-light-theme((
-  color: (
-    primary: $folio-genie-web-app-primary,
-    accent: $folio-genie-web-app-accent,
-    warn: $folio-genie-web-app-warn,
+$folio-genie-web-app-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $folio-genie-web-app-primary,
+      accent: $folio-genie-web-app-accent,
+      warn: $folio-genie-web-app-warn,
+    ),
   )
-));
+);
 
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
 @include mat.all-component-themes($folio-genie-web-app-theme);
 
-/* You can add global styles to this file, and also import other style files */
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+* {
+  font-family: "Montserrat", sans-serif !important;
+}
