--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 @include mat.core();
 
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400&family=Poppins:ital,wght@0,400;0,500;1,400&display=swap");
+@import "./assets/styles/variables.scss";
 
 $md-lightpalette: (
   50: #ebeefe,
@@ -66,5 +67,6 @@ body {
 }
 
 * {
-  font-family: "Montserrat", sans-serif !important;
+  font-family: "Montserrat", sans-serif;
+  box-sizing: border-box;
 }
