Added get started page

--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -4,7 +4,7 @@
   height: 80px;
   background: #ffffff;
   box-shadow: 0px 4px 4px rgba($primary-color, 0.1);
-  padding: 12px 80px;
+  padding: 12px 2.6%;
   .brand-logo {
     height: 56px;
     width: 232px;
