--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -4,13 +4,13 @@
   height: 80px;
   background: #ffffff;
   box-shadow: 0px 4px 4px rgba($primary-color, 0.1);
-  padding: 12px 2.6%;
+  padding: 16px 2.6%;
   .brand-logo {
-    height: 56px;
+    height: 48px;
     width: 232px;
     background-image: url("/assets/images/logos/foliogenie-logo.svg");
     background-repeat: no-repeat;
     background-size: contain;
-    background-position: center;
+    background-position: left;
   }
 }
