--- a/src/app/shared/components/customfield/customfield.component.html
+++ b/src/app/shared/components/customfield/customfield.component.html
@@ -1,5 +1,5 @@
 <div class="custom-field">
-  <label class="custom-field__label" [for]="label">
+  <label class="custom-field__label" [for]="label" *ngIf="label">
     {{ label }}
   </label>
   <input
