--- a/src/app/workspaces/onboard/components/onboard-layout/onboard-layout.component.html
+++ b/src/app/workspaces/onboard/components/onboard-layout/onboard-layout.component.html
@@ -25,7 +25,7 @@
         color="primary"
         class="onboard-layout__footer-button"
       >
-        Create Profile
+        Proceed
       </button>
     </div>
   </div>
