Added Configure portfolio Screen

--- a/src/app/workspaces/onboard/pages/configure-portfolio/configure-portfolio.component.html
+++ b/src/app/workspaces/onboard/pages/configure-portfolio/configure-portfolio.component.html
@@ -1,1 +1,6 @@
-<p>configure-portfolio works!</p>
+<form class="configure-portfolio">
+  <div class="configure-portfolio__title">Configure Portfolio Website</div>
+  <app-customfield label="Website Title"></app-customfield>
+  <app-customfield label="Tagline"></app-customfield>
+  <app-customfield label="Portfolio Handle"></app-customfield>
+</form>
