--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -4,7 +4,8 @@
   height: 80px;
   background: #ffffff;
   box-shadow: 0px 4px 4px rgba($primary-color, 0.1);
-  padding: 16px 2.6%;
+  padding: 16px 4%;
+  margin-bottom: 4px;
   .brand-logo {
     height: 48px;
     width: 232px;
