--- a/src/app/workspaces/onboard/pages/choose-profession/choose-profession.component.scss
+++ b/src/app/workspaces/onboard/pages/choose-profession/choose-profession.component.scss
@@ -17,19 +17,24 @@
   }
   &__grid {
     display: flex;
-
     gap: 80px;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
+    @media screen and (max-width: 680px) {
+      gap: 40px;
+    }
 
     &-item {
-      width: 120px;
-      height: 120px;
+      width: 160px;
+      height: 160px;
       background: #ffffff;
       box-shadow: 0px 0px 8px rgba($primary-color, 0.32);
       border-radius: 8px;
       cursor: pointer;
       transition: box-shadow 0.3s ease-in-out;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: contain;
       &:hover {
         box-shadow: 0px 0px 8px rgba($primary-color, 0.72);
       }
