--- a/src/app/workspaces/onboard/pages/configure-portfolio/configure-portfolio.component.html
+++ b/src/app/workspaces/onboard/pages/configure-portfolio/configure-portfolio.component.html
@@ -2,5 +2,9 @@
   <div class="configure-portfolio__title">Configure Portfolio Website</div>
   <app-customfield label="Website Title"></app-customfield>
   <app-customfield label="Tagline"></app-customfield>
-  <app-customfield label="Portfolio Handle"></app-customfield>
+  <app-customfield
+    label="Portfolio Handle"
+    sufixIcon="check"
+    sufixIconColor="green"
+  ></app-customfield>
 </form>
