--- a/src/app/shared/components/customfield/customfield.component.scss
+++ b/src/app/shared/components/customfield/customfield.component.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+  position: relative;
   &__label {
     color: $text-color;
     font-size: 16px;
@@ -25,5 +26,17 @@
     line-height: 20px;
     letter-spacing: 0em;
     text-align: left;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    &--with-sufix {
+      padding-right: 48px;
+    }
+  }
+  &__sufix {
+    position: absolute;
+    height: 24px;
+    width: 24px;
+    right: 24px;
+    bottom: 16px;
   }
 }
