File pload field

--- a/src/app/workspaces/onboard/pages/configure-portfolio/configure-portfolio.component.html
+++ b/src/app/workspaces/onboard/pages/configure-portfolio/configure-portfolio.component.html
@@ -7,4 +7,5 @@
     sufixIcon="check"
     sufixIconColor="green"
   ></app-customfield>
+  <app-file-upload-field label="Upload Fav Icon"></app-file-upload-field>
 </form>
