--- a/src/app/workspaces/onboard/pages/get-started/get-started.component.html
+++ b/src/app/workspaces/onboard/pages/get-started/get-started.component.html
@@ -4,4 +4,5 @@
   <app-customfield label="First Name"></app-customfield>
   <app-customfield label="Last Name"></app-customfield>
   <app-customfield label="Mobile Number"></app-customfield>
+  <app-file-upload-field label="Upload Profile Pic"></app-file-upload-field>
 </form>
