--- a/src/app/shared/components/customfield/customfield.component.html
+++ b/src/app/shared/components/customfield/customfield.component.html
@@ -8,6 +8,7 @@
     [id]="label"
     [title]="label"
     [placeholder]="placeholder"
+    [(ngModel)]="value"
   />
   <feather-icon
     [name]="sufixIcon"
