Added GLobal Loader

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -70,3 +70,6 @@ body {
   font-family: "Montserrat", sans-serif;
   box-sizing: border-box;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
