--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,3 +1,6 @@
 $primary-color: #5271ff;
 $text-color: #04080f;
+$secondary-text-color: #4f5665;
+$placeholder-color: #a0a8b8;
 $secondary-color: #f2f4ff;
+$error-color: #ff5271;
