--- a/src/app/workspaces/onboard/components/onboard-layout/onboard-layout.component.scss
+++ b/src/app/workspaces/onboard/components/onboard-layout/onboard-layout.component.scss
@@ -48,6 +48,7 @@
           align-items: center;
           justify-content: center;
           color: $primary-color;
+          flex-shrink: 0;
         }
         &-title {
           color: $text-color;
