--- a/src/app/workspaces/onboard/pages/connect-social-accounts/connect-social-accounts.component.html
+++ b/src/app/workspaces/onboard/pages/connect-social-accounts/connect-social-accounts.component.html
@@ -1,24 +1,21 @@
 <form class="connect-social">
   <div class="connect-social__title">Choose Your Profession</div>
   <div class="connect-social__list">
-    <div
-      class="connect-social__list-item"
-      *ngFor="let account of socialAccounts"
-    >
+    <div class="connect-social__list-item" *ngFor="let handle of handles">
       <div class="connect-social__list-item-icon">
-        <i-feather [name]="account.iconName" class="icon"></i-feather>
+        <i-feather [name]="handle.icon" class="icon"></i-feather>
       </div>
       <div class="connect-social__list-item-input">
-        <app-customfield></app-customfield>
+        <app-customfield [(value)]="handle.link"></app-customfield>
       </div>
       <div
         class="connect-social__list-item-check"
         [ngClass]="{
-          'connect-social__list-item-check--disabled': !account.isChecked
+          'connect-social__list-item-check--disabled': !handle.isChecked
         }"
       >
         <i-feather
-          [name]="account.isChecked ? 'check-circle' : 'circle'"
+          [name]="handle.isChecked ? 'check-circle' : 'circle'"
           class="check-icon"
         ></i-feather>
       </div>
