--- a/src/app/workspaces/onboard/pages/choose-design/choose-design.component.html
+++ b/src/app/workspaces/onboard/pages/choose-design/choose-design.component.html
@@ -1,5 +1,5 @@
 <form class="choose-design">
-  <div class="choose-design__title">Choose Your Profession</div>
+  <div class="choose-design__title">Choose Your Template</div>
   <div class="choose-design__grid">
     <div
       class="choose-design__grid-item"
