--- a/src/app/shared/components/template-preview/components/template-config/template-config.component.scss
+++ b/src/app/shared/components/template-preview/components/template-config/template-config.component.scss
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: row;
   z-index: 2;
+  transition: all 0.8s ease-in-out;
   &__toggle {
     margin-top: 120px;
     display: flex;
@@ -88,7 +89,8 @@
     }
   }
   &--collapse {
-    right: auto;
-    left: calc(100% - 60px);
+    // right: auto;
+    // left: calc(100% - 60px);
+    transform: translateX(calc(100% - 60px));
   }
 }
