--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -6,6 +6,8 @@
   box-shadow: 0px 4px 4px rgba($primary-color, 0.1);
   padding: 16px 4%;
   margin-bottom: 4px;
+  justify-content: space-between;
+  align-items: center;
   .brand-logo {
     height: 48px;
     width: 232px;
@@ -13,5 +15,48 @@
     background-repeat: no-repeat;
     background-size: contain;
     background-position: left;
+  }
+  .actions {
+    display: flex;
+    gap: 16px;
+    align-items: center;
+    .icon-button {
+      border: none;
+      background: transparent;
+      cursor: pointer;
+      height: 24px;
+    }
+    .user-img {
+      width: 32px;
+      height: 32px;
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+      border-radius: 50%;
+      cursor: pointer;
+      position: relative;
+      .user-actions {
+        appearance: none;
+        top: 32px;
+        width: 100px;
+        position: absolute;
+        background-color: #ffffff;
+        box-shadow: 0px 0px 8px rgba($primary-color, 0.2);
+        border-radius: 4px;
+        list-style: none;
+        margin: 0px;
+        padding: 0px;
+        left: -34px;
+        z-index: 1;
+        li {
+          padding: 8px;
+          font-size: 12px;
+          font-family: Roboto, "Helvetica Neue", sans-serif;
+          &:hover {
+            background-color: #f5f5f5;
+          }
+        }
+      }
+    }
   }
 }
