--- a/src/app/shared/components/template-preview/template-preview.component.scss
+++ b/src/app/shared/components/template-preview/template-preview.component.scss
@@ -11,47 +11,9 @@
     overflow: hidden;
     position: relative;
     flex: 1;
-    &-modes {
-      width: 60px;
-      position: absolute;
-      left: 0px;
-      top: 80px;
-      background: #ffffff;
-      box-shadow: 0px -4px 4px rgba($color: $primary-color, $alpha: 0.08),
-        0px 4px 4px rgba($color: $primary-color, $alpha: 0.08),
-        4px 0px 4px rgba($color: $primary-color, $alpha: 0.08);
-      border-radius: 0px 8px 8px 0px;
-      &-item {
-        width: 100%;
-        height: 60px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        cursor: pointer;
-        &:hover {
-          background-color: rgba($color: $primary-color, $alpha: 0.08);
-        }
-        &:active {
-          background-color: rgba($color: $primary-color, $alpha: 0.16);
-        }
-        &:first-child {
-          border-radius: 0px 8px 0px 0px;
-        }
-        &:last-child {
-          border-radius: 0px 0px 8px 0px;
-        }
-        .icon {
-          width: 20px;
-          height: 20px;
-          color: $text-color;
-        }
-        &--active {
-          background-color: $primary-color !important;
-          .icon {
-            color: white;
-          }
-        }
-      }
+    &-device {
+      height: 100%;
+      overflow: hidden;
     }
   }
   &__footer {
