--- a/src/app/shared/components/template-preview/template-preview.component.html
+++ b/src/app/shared/components/template-preview/template-preview.component.html
@@ -1,9 +1,9 @@
 <div class="template-preview">
   <div class="template-preview__holder">
     <div class="template-preview__holder-device">
-      <app-template-editor></app-template-editor>
+      <app-template-editor value="Hello World"></app-template-editor>
     </div>
-    <app-template-config [configuration]="config"></app-template-config>
+    <app-template-config></app-template-config>
   </div>
   <div class="template-preview__footer">
     <button
