--- a/src/app/workspaces/common/auth/auth.component.scss
+++ b/src/app/workspaces/common/auth/auth.component.scss
@@ -1,6 +1,7 @@
 @import "../../../../assets/styles/variables.scss";
 
 .login-form {
+  width: 80vw;
   display: flex;
   flex-direction: column;
   gap: 32px;
@@ -27,9 +28,6 @@
     text-align: center;
     border-radius: 8px;
     height: 56px;
-    @media screen and (max-width: 600px) {
-      height: 40px;
-    }
   }
 }
 
