Update file-upload-field component to handle file uploads

--- a/src/app/shared/components/file-upload-field/file-upload-field.component.html
+++ b/src/app/shared/components/file-upload-field/file-upload-field.component.html
@@ -1,7 +1,12 @@
 <div class="file-upload-field">
-  <input type="file" class="file-upload-field__input" appDnd />
+  <input
+    type="file"
+    class="file-upload-field__input"
+    (change)="onFileChange($event)"
+    appDnd
+  />
   <div class="file-upload-field__icon">
     <feather-icon name="upload" class="icon"></feather-icon>
   </div>
-  <div class="file-upload-field__label">{{label}}</div>
+  <div class="file-upload-field__label">{{ label }}</div>
 </div>
