--- a/src/app/shared/components/file-upload-field/file-upload-field.component.scss
+++ b/src/app/shared/components/file-upload-field/file-upload-field.component.scss
@@ -31,6 +31,28 @@
       width: 32px;
       height: 32px;
       color: $primary-color;
+      &--animate {
+        -webkit-animation: spin 4s linear infinite;
+        -moz-animation: spin 4s linear infinite;
+        animation: spin 4s linear infinite;
+      }
+
+      @-moz-keyframes spin {
+        100% {
+          -moz-transform: rotate(360deg);
+        }
+      }
+      @-webkit-keyframes spin {
+        100% {
+          -webkit-transform: rotate(360deg);
+        }
+      }
+      @keyframes spin {
+        100% {
+          -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
+        }
+      }
     }
   }
   &__label {
