Refactor file upload field component

--- a/src/app/shared/components/file-upload-field/file-upload-field.component.html
+++ b/src/app/shared/components/file-upload-field/file-upload-field.component.html
@@ -7,7 +7,9 @@
   />
   <div
     class="file-upload-field__icon"
-    [ngStyle]="{ backgroundImage: fileUrl ? 'url(' + fileUrl + ')' : 'none' }"
+    [ngStyle]="{
+      backgroundImage: previewImage
+    }"
   >
     <feather-icon
       [name]="isUploading ? 'loader' : 'upload'"
