--- a/src/app/shared/components/file-upload-field/file-upload-field.component.scss
+++ b/src/app/shared/components/file-upload-field/file-upload-field.component.scss
@@ -25,9 +25,25 @@
     width: 80px;
     height: 80px;
     padding: 24px;
-    background: rgba(82, 113, 255, 0.16);
+    background-color: white;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
     border-radius: 8px;
+    position: relative;
+    overflow: hidden;
+    &::before {
+      position: absolute;
+      content: "";
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: rgba(82, 113, 255, 0.24);
+    }
     .icon {
+      position: relative;
+      z-index: 1;
       width: 32px;
       height: 32px;
       color: $primary-color;
