--- a/src/app/workspaces/onboard/pages/configure-portfolio/configure-portfolio.component.scss
+++ b/src/app/workspaces/onboard/pages/configure-portfolio/configure-portfolio.component.scss
@@ -14,4 +14,31 @@
     text-align: center;
     color: $text-color;
   }
+
+  ::ng-deep {
+    .rotate-sufix-icon {
+      .custom-field__sufix {
+        -webkit-animation: spin 2s linear infinite;
+        -moz-animation: spin 2s linear infinite;
+        animation: spin 2s linear infinite;
+      }
+
+      @-moz-keyframes spin {
+        100% {
+          -moz-transform: rotate(360deg);
+        }
+      }
+      @-webkit-keyframes spin {
+        100% {
+          -webkit-transform: rotate(360deg);
+        }
+      }
+      @keyframes spin {
+        100% {
+          -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
+        }
+      }
+    }
+  }
 }
