Add sufix icon click event handler to CustomfieldComponent

--- a/src/app/shared/components/customfield/customfield.component.html
+++ b/src/app/shared/components/customfield/customfield.component.html
@@ -23,5 +23,6 @@
     class="custom-field__sufix"
     *ngIf="sufixIcon"
     [ngStyle]="{ color: sufixIconColor ?? 'red' }"
+    (click)="onSufixIconClick()"
   ></feather-icon>
 </div>
