Fix user status enum and update connect social component

--- a/src/app/shared/components/customfield/customfield.component.html
+++ b/src/app/shared/components/customfield/customfield.component.html
@@ -11,7 +11,7 @@
     class="custom-field__input"
     [ngClass]="{ 'custom-field__input--with-sufix': sufixIcon }"
     [id]="label"
-    [title]="label"
+    [title]="label??''"
     [placeholder]="placeholder"
     [(ngModel)]="value"
     [disabled]="disabled"
