Add resendVerificationEmail() method to AuthService and ProfileService

--- a/src/app/workspaces/common/verify-email/verify-email.component.html
+++ b/src/app/workspaces/common/verify-email/verify-email.component.html
@@ -16,7 +16,7 @@
       </p>
       <p class="verify-email__resend">
         Didn't receive the email?
-        <a href="#" (click)="resendEmail()">Resend email</a>
+        <a href="javascript:void(0)" (click)="resendVerificationEmail()">Resend email</a>
       </p>
     </div>
     <ng-template #validationLoader>
