Fix image and tagline display issues

--- a/src/app/workspaces/onboard/pages/configure-portfolio/configure-portfolio.component.html
+++ b/src/app/workspaces/onboard/pages/configure-portfolio/configure-portfolio.component.html
@@ -4,7 +4,7 @@
     label="Website Title"
     [(value)]="config.siteTitle"
   ></app-customfield>
-  <app-customfield label="Tagline"></app-customfield>
+  <app-customfield label="Tagline" [(value)]="config.tagline"></app-customfield>
   <app-customfield
     [required]="true"
     label="Portfolio Handle"
